--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,9 @@
 // Variables
 @import 'variables';
 
+//custom css
+@import 'header';
+@import 'sidebar';
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
